Added package parskip

--- a/ProblemSet/Harper/template.tex
+++ b/ProblemSet/Harper/template.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt]{article}
 \usepackage{fullpage}
+\usepackage{parskip}
 \usepackage{latexsym}
 \usepackage{amsthm}
 \usepackage{amssymb}
